--- a/src/css/HotelForm.css
+++ b/src/css/HotelForm.css
@@ -2,7 +2,7 @@
   padding: 20px;
   margin: 0 auto;
 /*max-width: 800px;*/
-  background-color: #f9f9f9;
+  background-color: #ECEDF3;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -38,6 +38,7 @@
   border-radius: 5px;
   box-sizing: border-box;
   margin-top: 1rem;
+  height: 3rem;
 }
 
 
@@ -128,4 +129,64 @@ textarea.form-control {
   padding: 15px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+#about{
+  width: 40rem;
+  height: 9rem;
+  border-radius: 11px;
+  color: #6c757d;
+
+
+}
+
+.leftContent {
+  padding: 10px;
+  color: black;
+  font-size: 14px;
+  margin-bottom: 13px;
+  width: 100%; /* Ensure full width */
+ /* max-width: 800px;  Example: Limit maximum width */
+  margin: 0 auto; /* Center horizontally */
+}
+
+@media (min-width: 768px) {
+  .col-md-6 {
+    flex: 0 0 calc(50% - 30px);
+    max-width: calc(50% - 30px);
+  }
+
+  .col-md-12 {
+    flex: 0 0 calc(100% - 30px);
+    max-width: calc(100% - 30px);
+  }
+}
+
+/* Other CSS code */
+
+/*#about {
+  width: 100%;
+  height: auto;
+  border-radius: 11px;
+  color: #6c757d;
+}
+*/
+@media (max-width: 767px) {
+  #about {
+    width: 100%;
+    height: auto;
+  }
+  #root {
+    max-width: 358px;
+  
+  }
+  .logo {
+    height: 4em;
+    padding: 0.0em;
+    will-change: filter;
+    transition: filter 300ms;
+}
+.right-content button {
+  padding: 4px 16px;
+  margin-left: -56rem;
+}
 }
