--- a/src/css/PriceBasedRooms.css
+++ b/src/css/PriceBasedRooms.css
@@ -6,7 +6,7 @@
   }
   
   .price-section {
-    width: 100%; /* Adjust width as needed */
+   /* width: 100%; Adjust width as needed */
     max-width: 600px; /* Example max-width */
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -60,7 +60,7 @@
   .villasprice {
     background-color: white !important;
     width: 100%;
-    height: 2rem;
+    height: 3rem;
     text-align: center;
     border-radius: 5px;
     margin: 10px auto;
@@ -85,6 +85,7 @@
     border-radius: 5px;
     margin-top: 0.9rem;
     width: 80%;
+    height: 1.8rem;
   }
   
   .add-room-form button {
@@ -96,8 +97,10 @@
     border: none;
     cursor: pointer;
     background-color: #007bff;
+    
     color: #fff;
-    width: 84%;
+    width: 30%;
+    height: 3rem;
    
   }
   
