--- a/src/css/Spaces.css
+++ b/src/css/Spaces.css
@@ -10,8 +10,9 @@
   overflow-y: hidden; /* Hide vertical scroll */
   white-space: nowrap; /* Prevent items from wrapping */
 }
+
 .form-groupspace.scrollable {
-  max-height: 500px; /* Adjust this height as needed */
+  max-height: 85vh; /* Adjust this height as needed */
   overflow-y: auto;
 }
 
@@ -27,6 +28,7 @@
   flex-direction: column;
   align-items: center;
 }
+
 .form-control-file {
   display: block;
   margin-bottom: 10px;
@@ -38,7 +40,7 @@
 }
 
 .image-preview img {
-  max-width: 100%;
+  max-width: 45vh;
   height: auto;
   display: block;
   border-radius: 5px;
@@ -48,24 +50,30 @@
   position: absolute;
   top: -5px;
   right: -5px;
-  background-color: #f00;
-  color: #fff;
+  background-color: #fff; 
+  color: #db3125;
   border: none;
   border-radius: 50%;
   cursor: pointer;
+  width: 24px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
 }
 
 .image-placeholder {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 200px; /* Adjust height as needed */
-  border: 1px dashed #ccc;
-  border-radius: 5px;
-  width: 400px; /* Adjust width as needed */
+  height: 400px;
+  border: 1px solid #9e9e9e96;
+  border-radius: 30px;
+  width: 400px;
   background-color: white;
   overflow: hidden;
-  margin-bottom: 2rem; /* Prevent image from going outside */
+  margin-bottom: 2rem;
 }
 
 .image-placeholder span {
@@ -78,12 +86,42 @@
 }
 
 .spacelabel {
-  margin-top: -2rem;
+  /*margin-top: 0;
   color: black;
   margin-bottom: 10px;
-  font-size: x-large !important;
-  margin-left: -69rem;
+  font-size: 1.2rem;
+  font-weight: 700;
+  margin-left: 0; /* Ensure no left margin 
+  text-align: left; 
+  font-size: 1.2rem;
+    color: black;
+    margin-left: -61rem;
+    margin-top: 5px;
+    font-weight: 700;/* Ensure text alignment to the left */
+
+    text-align: left;
+    font-size: 1.3rem;
+    color: black;
+    margin-left: 2rem;
+    margin-top: -25px;
+    font-weight: 700;
+    margin-bottom: 19px;
+}  
+/*.remove-btn {
+  color: #0e0d0d;
+    padding: 8px;
+    border-radius: 50%;
+    cursor: pointer;
+    font-size: 1.2rem;
+    border: none;
+    width: 36px;
+    height: 36px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 36rem;
 }
+*/
 
 .add-space-btn-container {
   display: flex;
@@ -95,31 +133,29 @@
 
 .add-space-btn {
   padding: 10px 20px;
-  font-size: 16px;
+  font-size: 35px;
   cursor: pointer;
   border: none;
-  background-color: #6eb73d;
+  background-color: #FAF1F1;
   display: flex;
   align-items: center;
+  border-radius: 50%;
   justify-content: center;
-  margin-bottom: 1rem;
+  margin-bottom: -31rem;
+  margin-right: 34px;
+  width: 50px;
+  height: 50px;
 }
 
 .add-space-btn:hover {
-  background-color: #5aa32c;
-}
-
-.remove-point-btn {
-  background: none;
-  border: none;
-  color: #ff0000;
-  cursor: pointer;
-  padding: 0;
+  background-color: #FAF1F1;
 }
 
 .point-input {
   flex: 1;
-}.input-with-icon {
+}
+
+.input-with-icon {
   display: flex;
   align-items: center;
 }
@@ -138,14 +174,50 @@
   margin-left: 5px; /* Adjust spacing as needed */
 }
 
+.input-with-icon .remove-point-btn.selected {
+  background-color: #FAF1F1;
+}
+
+.input-with-icon .remove-point-btn:hover {
+  background-color: #FFEDED;
+}
+
+.input-with-icon .remove-point-btn.selected:hover {
+  background-color: #E0D1D1;
+}
+
 .remove-btn {
-  background-color: #dc3545;
-  color: white;
-  border: none;
-  padding: 8px 16px;
-  border-radius: 4px;
+  background-color: #fcf9f9db;
+  color: #0c0c0c;
+  padding: 8px;
+  border-radius: 50%;
   cursor: pointer;
-  margin-top: 8px;
+  font-size: 1.2rem;
+  border: none;
+  width: 36px;
+  height: 36px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 36rem;
+}
+
+.remove-btn:hover {
+  background-color: #f71f34;
+  color: white;
+}
+
+.remove-point-btn {
+  background: none;
+  border: none;
+  background-color: #df1e1eba;
+  cursor: pointer;
+  padding: 0;
+  width: 24px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .add-point-btn {
@@ -157,6 +229,12 @@
   cursor: pointer;
   margin-top: 8px;
 }
-.meallabel{
+
+.meallabel {
   color: rgb(49, 48, 48);
+}
+
+.addpoint {
+  color: #00000061;
+  font-size: 1.6rem;
 }
